<resources>
    <string name="app_name">L1_Ninalaya_Crhistian</string>
    <string name="ingrese_su_carrera">Ingrese su Carrera</string>
    <string name="ingrese_su_nombre_y_apellido">Ingrese su Nombre y Apellido</string>
    <string name="ingrese_su_dni">Ingrese su DNI</string>
    <string name="descuento">Descuento:</string>
    <string name="_5">5%</string>
    <string name="_10">10%</string>
    <string name="_12">12%</string>
    <string name="calcular">Calcular</string>
</resources>