<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MATRICULA"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText

        android:id="@+id/inputDNI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/titulo"
        android:hint="@string/ingrese_su_dni"
        android:inputType="number"
        android:maxLength="8"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputDNI"
        android:hint="@string/ingrese_su_nombre_y_apellido"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteCarrera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_su_carrera"
        app:layout_constraintTop_toBottomOf="@+id/inputAlumno"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:completionThreshold="1"
        android:inputType="text"

        />

    <RadioGroup
        android:id="@+id/rgDescuento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteCarrera"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descuento"
            android:textSize="20sp"
            />

        <RadioButton
            android:id="@+id/rbCincoPorCiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            />

        <RadioButton
            android:id="@+id/rbDiezPorCiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            />

        <RadioButton
            android:id="@+id/rbDocePorCiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12"
            />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/calcular"
        android:layout_marginHorizontal="30dp"
        android:background="@color/material_dynamic_primary60"
        app:layout_constraintTop_toBottomOf="@+id/rgDescuento"
        />

    <!--    Aca inicia la tabla-->
    <TableLayout
        android:id="@+id/tableMontos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnCalcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        >
        <TableRow android:gravity="center">
            <TextView
                android:text="PENSIÓN"
                android:layout_marginHorizontal="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="DESC.1"
                android:layout_marginHorizontal="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="DESC.2"
                android:layout_marginHorizontal="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="T.DESC"
                android:layout_marginHorizontal="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>


        <!-- Filas de datos -->
        <TableRow android:gravity="center">
            <TextView
                android:id="@+id/textPension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/textDesc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/textDesc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/textTDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />
        </TableRow>
        <TableRow android:gravity="center">
            <TextView
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TOTAL:"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/textTPagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="20sp"
                />
        </TableRow>
    </TableLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnImprimir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Imprimir"
        app:layout_constraintTop_toBottomOf="@+id/tableMontos"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/material_dynamic_primary60"
        android:enabled="false"
        />


</androidx.constraintlayout.widget.ConstraintLayout>